--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
             <li><a class="dark-2">Portfolio</a></li>
             <li><a class="dark-2" href="">Blog</a></li>
-            <li><a href=""><button class="btn-primary">Hire Me </button></a></li>
+            <li><a href=""><button class="btn-primary btn">Hire Me </button></a></li>
             </ul>
         </nav>
         <div class="banner">
@@ -24,8 +24,8 @@
               <h4 class="banner-greetings dark-2">Hi, I am </h4>
               <h3 class="banner-title ">Fahim Hasan</h3>
               <p class="banner-description ">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-              <button class="btn-primary">Download CV</button>
-              <button class="btn-primary">Contact</button>
+              <button class="btn-primary btn">Download CV</button>
+              <button class="btn-primary btn">Contact</button>
 
             </div>
             <img class="banner-profile-pic" src="images/1712136168258-removebg-preview.png" alt="My photo">
@@ -140,13 +140,31 @@
                 </div>
             </div>
             <div class="text-center download-cv">
-<input class="btn-primary" type="button" value="Download CV"></div>
+<input class="btn-primary btn"  type="button" value="Download CV"></div>
          </section>
 
 
     </main>
-    <footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href="https://www.facebook.com/profile.php?id=100068304346965"><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+        <h3 class="section-title"> Let's Massage me</h3>
+        <form class="ic" action="">
+            <input type="text" name="" id="" placeholder="Your Name ">
+            <input type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Massage"></textarea>
+            <input class="btn-primary btn" type="button" value="Submit">
+        </form>
 
+    </div>
     </footer>
 </body>
 </html>
