--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="icon" type="image/x-icon" href="./images/icons/download.png">
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -24,12 +25,13 @@
               <h4 class="banner-greetings dark-2">Hi, I am </h4>
               <h3 class="banner-title ">Fahim Hasan</h3>
               <p class="banner-description ">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-              <button class="btn-primary btn">Download CV</button>
-              <button class="btn-primary btn">Contact</button>
+              <button class="btn-primary btn"> <i class="fa-solid fa-download"></i> Download CV</button>
+              <button class="btn-primary btn"><i class="fa-solid fa-phone"></i> Contact</button>
 
             </div>
             <img class="banner-profile-pic" src="images/1712136168258-removebg-preview.png" alt="My photo">
         </div>
+        <script src="https://kit.fontawesome.com/4ca2241135.js" crossorigin="anonymous"></script>
 
     </header>
     <main>
@@ -101,15 +103,15 @@
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <h4 class="experience-title">HSC</h4>
+                        <h5 class="experience-sub-title">Chuadanga Govt college  2022- 2023</h5>
                         <div class="experience-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <h4 class="experience-title">Honours First Year</h4>
+                        <h5 class="experience-sub-title">Chuadanga govt college  2024</h5>
                         <div class="experience-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
@@ -140,7 +142,8 @@
                 </div>
             </div>
             <div class="text-center download-cv">
-<input class="btn-primary btn"  type="button" value="Download CV"></div>
+<button class="btn-primary btn"> <i class="fa-solid fa-download"></i>   Download CV</button></div>
+
          </section>
 
 
