--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="./images/icons/download.png">
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
         <nav>
             <h3 class="nav-title">Fa<span class="text-primary">h</span>im</h3>
             <ul>
@@ -35,7 +35,7 @@
 
     </header>
     <main>
-        <section class="about secondary-bg">
+        <section class="about secondary-bg ">
             <h3 class="section-titel"> About Me</h3>
             <p class="section-description"> I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="about-items">
@@ -60,7 +60,7 @@
             </div>
         </section>
         <!-- what is do section start -->
-         <section class="skills text-center">
+         <section class="skills text-center ">
             <h3 class="section-title section-titel">What I do </h3>
             <p class="section-description">I have more than <strong> 4 years </strong>experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skills-container">
@@ -87,7 +87,7 @@
             </div>
          </section>
          
-         <section class="resume">
+         <section class="resume ">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
@@ -148,7 +148,7 @@
 
 
     </main>
-    <footer class="secondary-bg">
+    <footer class="secondary-bg ">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
