--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="./images/icons/download.png">
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg ">
         <nav>
             <h3 class="nav-title">Fa<span class="text-primary">h</span>im</h3>
             <ul>
